# dotfiles-install

./: Cargo.toml  README.md  template.json  template.jsonc
dotfiles-install/: Cargo.toml
dotfiles-install/src/: main.rs
dotfiles-install/src/worker/: io.rs  mod.rs  prompt.rs
dotfiles-schema/: Cargo.toml
dotfiles-schema/src/: lib.rs
dotfiles-schema/src/types/: impls.rs  mod.rs
src/: main.rs
