[package]
name = "dotfiles-install"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
dotfiles-schema = { path = "../dotfiles-schema" }
url = "2.3.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
rpassword = "7.2.0"
