[package]
name = "dotfiles-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
schemars = "0.8.12"
reqwest = { version = "0.11.17", features = ["json"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
strum_macros = "0.24.3"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
